# azure-notificationhubs-rust

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  notification_hub_client.rs  sas_token_provider.rs
src/service/: mod.rs
